# PDMSPython

./: .gitignore  Acknowledgements.txt  CMakeLists.txt  License.txt  PDMSConfig.cmake  PDMSConfigVersion.cmake  README.md
doc/: PDMS.bat  PDMS.md  PDMS.py
src/PDMS/: ClusterSM.py  ConfigLoader.py  DocCluster.py  DocSearcher.py  FileAccess.py  GUI.py  GUI_01.py  GUI_02.py  PDMSStates.py  ScanSM.py  Scanner.py  SearchSM.py  main_scan.py  main_search.py  settings.py  setup.py  statemachine.py
src/PDMS/.spyproject/: workspace.ini
src/PDMS/Qt/PDMS/: PDMS.pro  PDMS_01.ui  PDMS_02.ui  PDMS_03.ui  PDMS_04.ui  PDMS_05.ui  mainwindow.ui
src/PDMS/Qt/build-PDMS-Desktop_Qt_5_10_0_MSVC2013_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
src/PDMS/Qt/build-PDMS-Desktop_Qt_5_10_0_MSVC2013_64bit-Debug/debug/: PDMS.ilk  moc_mainwindow.cpp  moc_predefs.h
